--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ const guessField = document.querySelector('.guessField');
 let guessCount = 1;
 let resetButton;
 
+guessField.focus();
+
 function checkGuess() {
   let userGuess = Number(guessField.value);
   if (guessCount === 1) {
